--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,16 +49,15 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
+            <li><%= link_to "Sign in", new_user_session_path %></li>
+            <% if user_signed_in? %>
+              <div class="navbar-right">
+                <p class="navbar-text">
+                  Signed in as <%= "#{current_user.email}" %>
+                </p>
+              </div>
+            <% end %>
+            
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
